Update Workbox reference docs to 4.1.1

--- a/src/content/en/tools/workbox/_shared/contributors.html
+++ b/src/content/en/tools/workbox/_shared/contributors.html
@@ -106,6 +106,24 @@
         </a>
       </div>
       <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/peterjosling" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/930324?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/peterjosling" target="_blank">
+          peterjosling
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/tsirlucas" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/18744505?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/tsirlucas" target="_blank">
+          tsirlucas
+        </a>
+      </div>
+      <div class="wb-contrib">
         <a class="wb-contrib__img-link" href="https://github.com/josephliccini" target="_blank">
           <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/7726025?v&#x3D;4">
         </a>
@@ -187,30 +205,12 @@
         </a>
       </div>
       <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/sircelsius" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/5041899?v&#x3D;4">
+        <a class="wb-contrib__img-link" href="https://github.com/kaykayehnn" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/19822240?v&#x3D;4">
         </a>
         <br />
-        <a class="wb-contrib__link" href="https://github.com/sircelsius" target="_blank">
-          sircelsius
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/tanhauhau" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/2338632?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/tanhauhau" target="_blank">
-          tanhauhau
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/Lyricalz" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars0.githubusercontent.com/u/1624261?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/Lyricalz" target="_blank">
-          Lyricalz
+        <a class="wb-contrib__link" href="https://github.com/kaykayehnn" target="_blank">
+          kaykayehnn
         </a>
       </div>
 
