--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-core__private_DBWrapper.mjs.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-core__private_DBWrapper.mjs.html
@@ -103,7 +103,7 @@ export class DBWrapper {
         if (openRequestTimedOut) {
           db.close();
         } else {
-          db.onversionchange &#x3D; this._onversionchange;
+          db.onversionchange &#x3D; this._onversionchange.bind(this);
           resolve(db);
         }
       };
@@ -263,7 +263,10 @@ export class DBWrapper {
    * blocked by the current, open connection.
    */
   close() {
-    if (this._db) this._db.close();
+    if (this._db) {
+      this._db.close();
+      this._db &#x3D; null;
+    }
   }
 }
 
