--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-window_messageSW.mjs.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-window_messageSW.mjs.html
@@ -32,8 +32,8 @@ import &#x27;./_version.mjs&#x27;;
 
 
 /**
- * Sends a data object to a service worker via &#x60;postMessage&#x60; and resolves
- * and resolves with a response (if any).
+ * Sends a data object to a service worker via &#x60;postMessage&#x60; and resolves with
+ * a response (if any).
  *
  * A response can be set in a message handler in the service worker by
  * calling &#x60;event.ports[0].postMessage(...)&#x60;, which will resolve the promise
