--- a/src/content/en/tools/workbox/reference-docs/latest/workbox-window_utils_EventTargetShim.mjs.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox-window_utils_EventTargetShim.mjs.html
@@ -58,7 +58,7 @@ class EventTargetShim {
    * @param {Function} listener
    */
   removeEventListener(type, listener) {
-    this._getEventListenersByType(type).remove(listener);
+    this._getEventListenersByType(type).delete(listener);
   }
 
   /**
