--- a/src/content/en/tools/workbox/_shared/config/groups/common-generate-schema.html
+++ b/src/content/en/tools/workbox/_shared/config/groups/common-generate-schema.html
@@ -23,3 +23,5 @@
 {% include "web/tools/workbox/_shared/config/single/offlineGoogleAnalytics.html" %}
 
 {% include "web/tools/workbox/_shared/config/single/cleanupOutdatedCaches.html" %}
+
+{% include "web/tools/workbox/_shared/config/single/navigationPreload.html" %}
