Remove private members from v4.2.0 Workbox docs

--- a/src/content/en/tools/workbox/_shared/contributors.html
+++ b/src/content/en/tools/workbox/_shared/contributors.html
@@ -88,6 +88,15 @@
         </a>
       </div>
       <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/merrywhether" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/4097742?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/merrywhether" target="_blank">
+          merrywhether
+        </a>
+      </div>
+      <div class="wb-contrib">
         <a class="wb-contrib__img-link" href="https://github.com/xMokAx" target="_blank">
           <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/28633542?v&#x3D;4">
         </a>
@@ -103,6 +112,15 @@
         <br />
         <a class="wb-contrib__link" href="https://github.com/samdutton" target="_blank">
           samdutton
+        </a>
+      </div>
+      <div class="wb-contrib">
+        <a class="wb-contrib__img-link" href="https://github.com/kevin-brotcke" target="_blank">
+          <img class="wb-contrib__image" src="https://avatars3.githubusercontent.com/u/1934842?v&#x3D;4">
+        </a>
+        <br />
+        <a class="wb-contrib__link" href="https://github.com/kevin-brotcke" target="_blank">
+          kevin-brotcke
         </a>
       </div>
       <div class="wb-contrib">
@@ -193,24 +211,6 @@
         <br />
         <a class="wb-contrib__link" href="https://github.com/taehwanno" target="_blank">
           taehwanno
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/swarajgiri" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars1.githubusercontent.com/u/6647345?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/swarajgiri" target="_blank">
-          swarajgiri
-        </a>
-      </div>
-      <div class="wb-contrib">
-        <a class="wb-contrib__img-link" href="https://github.com/kaykayehnn" target="_blank">
-          <img class="wb-contrib__image" src="https://avatars2.githubusercontent.com/u/19822240?v&#x3D;4">
-        </a>
-        <br />
-        <a class="wb-contrib__link" href="https://github.com/kaykayehnn" target="_blank">
-          kaykayehnn
         </a>
       </div>
 
