--- a/src/content/en/tools/workbox/reference-docs/v4.2.0/workbox-broadcast-update_BroadcastCacheUpdate.mjs.html
+++ b/src/content/en/tools/workbox/reference-docs/v4.2.0/workbox-broadcast-update_BroadcastCacheUpdate.mjs.html
@@ -218,6 +218,8 @@ class BroadcastCacheUpdate {
    * navigation fetch event whose client ID matched the source ID of the
    * message event, but currently client IDs are not exposed on navigation
    * fetch events: https://www.chromestatus.com/feature/4846038800138240
+   *
+   * @private
    */
   _initWindowReadyDeferreds() {
     // A mapping between navigation events and their deferreds.
