Fix styling issue on Site Kit setup page.

--- a/src/content/en/site-kit/index.html
+++ b/src/content/en/site-kit/index.html
@@ -8,7 +8,7 @@
     <meta name="hide_last_updated" value="true" />
     <meta name="no_page_title" value="true" />
     <style>
-      .devsite-landing-page .devsite-article {
+      .devsite-article-body {
         margin: 0 auto;
         max-width: 800px;
       }
