--- a/src/content/en/tools/workbox/reference-docs/v4/workbox-strategies_NetworkFirst.mjs.html
+++ b/src/content/en/tools/workbox/reference-docs/v4/workbox-strategies_NetworkFirst.mjs.html
@@ -47,7 +47,7 @@ import &#x27;./_version.mjs&#x27;;
  *
  * By default, this strategy will cache responses with a 200 status code as
  * well as [opaque responses]{@link /web/tools/workbox/guides/handle-third-party-requests}.
- * Opaque responses are cross-origin requests where the response doesn&#x27;t
+ * Opaque responses are are cross-origin requests where the response doesn&#x27;t
  * support [CORS]{@link https://enable-cors.org/}.
  *
  * If the network request fails, and there is no cache match, this will throw
