--- a/src/content/en/tools/workbox/reference-docs/v4/workbox.core.html
+++ b/src/content/en/tools/workbox/reference-docs/v4/workbox.core.html
@@ -19,7 +19,7 @@
             <div class="symbol-detail-labels"><span class="label label-kind"><small>namespace</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span> &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v4.3.0</small></span>
+              <span class="label label-version"><small>v4.3.1</small></span>
             </div>
             <p>All of the Workbox service worker libraries use workbox-core for shared code as well as setting default values that need to be shared (like cache names).
             </p>
@@ -147,7 +147,7 @@
               <h3 id=".registerQuotaErrorCallback" class="symbol-name">registerQuotaErrorCallback</h3>
               <div class="symbol-detail-labels"><span class="label label-static"><small>static</small></span></div>
               <p class="type-signature"> registerQuotaErrorCallback(callback)</p>
-              <p>Adds a function to the set of callbacks that will be executed when there's a quota error.</p>
+              <p>Adds a function to the set of quotaErrorCallbacks that will be executed if there's a quota error.</p>
               <section>
                 <table class="function param responsive">
                   <tr>
