--- a/src/content/en/tools/workbox/reference-docs/v4/workbox.strategies.NetworkFirst.html
+++ b/src/content/en/tools/workbox/reference-docs/v4/workbox.strategies.NetworkFirst.html
@@ -19,11 +19,11 @@
             <div class="symbol-detail-labels"><span class="label label-kind"><small>class</small></span>&nbsp;&nbsp;&nbsp;<span class="label label-static"><small>static</small></span></div>
             <div class="symbol-detail-labels">
               <span class="label label-kind"><small>Version</small></span> &nbsp;&nbsp;&nbsp;
-              <span class="label label-version"><small>v4.3.0</small></span>
+              <span class="label label-version"><small>v4.3.1</small></span>
             </div>
             <p>An implementation of a
               <a href="/web/fundamentals/instant-and-offline/offline-cookbook/#network-falling-back-to-cache">network first</a> request strategy.</p>
-            <p>By default, this strategy will cache responses with a 200 status code as well as <a href="/web/tools/workbox/guides/handle-third-party-requests">opaque responses</a>. Opaque responses are cross-origin requests
+            <p>By default, this strategy will cache responses with a 200 status code as well as <a href="/web/tools/workbox/guides/handle-third-party-requests">opaque responses</a>. Opaque responses are are cross-origin requests
               where the response doesn't support <a href="https://enable-cors.org/">CORS</a>.</p>
             <p>If the network request fails, and there is no cache match, this will throw a <code>WorkboxError</code> exception.</p>
           </header>
