Update some details in Site Kit parameters to better account for new page and fix related issues.

--- a/src/content/en/site-kit/index.html
+++ b/src/content/en/site-kit/index.html
@@ -1,6 +1,6 @@
 <html devsite>
   <head>
-    <title>Site-Kit</title>
+    <title>Site Kit</title>
     <meta name="project_path" value="/web/site-kit/_project.yaml" />
     <meta name="book_path" value="/web/site-kit/_book.yaml" />
     <meta name="page_type" value="landing" />
