Fixed mixed content example and link
The site was moved this fixes the link and now the site actually has mixed content on it.

--- a/src/content/en/fundamentals/security/prevent-mixed-content/_code/simple-example.html
+++ b/src/content/en/fundamentals/security/prevent-mixed-content/_code/simple-example.html
@@ -27,7 +27,7 @@
       </p>
       <div id="output">Waiting for insecure script to run...</div>
       <!-- // [START snippet1] -->
-      <script src="https://googlesamples.github.io/web-fundamentals/samples/discovery-and-distribution/prevent-mixed-content/simple-example.js"></script>
+      <script src="http://googlesamples.github.io/web-fundamentals/fundamentals/security/prevent-mixed-content/simple-example.js"></script>
       <!-- // [END snippet1] -->
     </div>
     <script>
