--- a/src/content/en/site-kit/index.html
+++ b/src/content/en/site-kit/index.html
@@ -71,6 +71,7 @@
           data-henhouse-extra-api-ids="adsense.googleapis.com,analytics.googleapis.com,analyticsreporting.googleapis.com,pagespeedonline.googleapis.com,siteverification.googleapis.com,tagmanager.googleapis.com,webmasters.googleapis.com"
           data-henhouse-credential-type="OAUTH"
           data-henhouse-client-type="WEB_SERVER"
+          data-henhouse-display-entire-oauth-client-config="true"
           {% dynamic if user.signed_in and setvar.projectName and setvar.productName and setvar.redirectURI %}
             data-henhouse-project-name="{% dynamic print setvar.projectName|escape %}"
             data-henhouse-product-name="{% dynamic print setvar.productName|escape %}"
