--- a/src/content/en/site-kit/index.html
+++ b/src/content/en/site-kit/index.html
@@ -68,7 +68,7 @@
           data-henhouse-header-logo-url="https://www.gstatic.com/images/branding/product/1x/googleg_64dp.png"
           data-henhouse-use-updated-header="true"
           data-api-id="servicemanagement.googleapis.com"
-          data-henhouse-extra-api-ids="adsense.googleapis.com,analytics.googleapis.com,analyticsreporting.googleapis.com,pagespeedonline.googleapis.com,siteverification.googleapis.com,tagmanager.googleapis.com,webmasters.googleapis.com"
+          data-henhouse-extra-api-ids="adsense.googleapis.com,analytics.googleapis.com,analyticsreporting.googleapis.com,pagespeedonline.googleapis.com,people.googleapis.com,siteverification.googleapis.com,tagmanager.googleapis.com,webmasters.googleapis.com"
           data-henhouse-credential-type="OAUTH"
           data-henhouse-client-type="WEB_SERVER"
           data-henhouse-display-entire-oauth-client-config="true"
