--- a/src/content/en/site-kit/index.html
+++ b/src/content/en/site-kit/index.html
@@ -54,6 +54,12 @@
         <dd class="dl-field-description">The URI to redirect to after an authenticating user has granted consent.</dd>
       </dl>
       {% dynamic endif %}
+      {% dynamic if request.query_string.warn_adblocker %}
+        <aside class="warning">
+          <strong>Warning:</strong>
+          <span>It looks like you are using an adblocker. You must temporarily disable it before clicking the button below.</span>
+        </aside>
+      {% dynamic endif %}
       <p>
         Once the project has been created, you will see a client configuration snippet. You must copy this value into the corresponding field in your Site Kit plugin, open in the other browser tab.
       </p>
