Remove the 30 seconds heuristic
From @slightlyoff tweet: https://twitter.com/slightlylate/status/1138836352957444096

--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -17,8 +17,8 @@
     </ul>
   </li>
   <li>
-    Meets a user engagement heuristic (currently, the user has interacted
-    with the domain for at least 30 seconds)
+    Meets a user engagement heuristic (previously, the user had to interact
+    with the domain for at least 30 seconds, this is not a requirement anymore)
   </li>
   <li>
     Includes a <a href="/web/fundamentals/web-app-manifest/">
