--- a/src/content/en/tools/workbox/guides/_shared/register-sw.html
+++ b/src/content/en/tools/workbox/guides/_shared/register-sw.html
@@ -2,7 +2,7 @@
 
 <pre class="prettyprint js">
 &lt;script>
-// Check that service workers are registered
+// Check that service workers are supported
 if ('serviceWorker' in navigator) {
   // Use the window load event to keep the page load performant
   window.addEventListener('load', () => {
