--- a/src/content/en/updates/_shared/deprecations.html
+++ b/src/content/en/updates/_shared/deprecations.html
@@ -1,1 +1,1 @@
-Chrome Platform Status provides a list of [current deprecations](https://www.chromestatus.com/features#browsers.chrome.status:%22Deprecated%22).
+New deprecations for this version of Chrome are listed below. Chrome Platform Status provides a [list of deprecated features](https://www.chromestatus.com/features#browsers.chrome.status:%22Deprecated%22) from this and previous versions of Chrome.
