--- a/src/content/en/updates/_shared/no-new-deprecations.html
+++ b/src/content/en/updates/_shared/no-new-deprecations.html
@@ -1,1 +1,1 @@
-No features have been deprecated in this version of Chrome. Chrome Platform Status provides a [list of deprecated features](https://www.chromestatus.com/features#browsers.chrome.status:%22Deprecated%22) from previous versions of Chrome.
+No features have been deprecated in this version of Chrome. Chrome Platform Status provides a <a href="https://www.chromestatus.com/features#browsers.chrome.status:%22Deprecated%22">list of deprecated features</a> from previous versions of Chrome.
