--- a/src/content/en/updates/_shared/no-new-deprecations.html
+++ b/src/content/en/updates/_shared/no-new-deprecations.html
@@ -1,6 +1,6 @@
 No features have been deprecated in this version of Chrome.
 Chrome Platform Status provides a
-<a href="https://www.chromestatus.com/features#browsers.chrome.status:%22Deprecated%22">
+<a href='https://chromestatus.com/features#browsers.chrome.status:"Deprecated"'>
   list of deprecated features
 </a>
 from previous versions of Chrome.
