Remove references to the Broadcast Channel API

--- a/src/content/en/tools/workbox/_shared/config/single/runtimeCaching.html
+++ b/src/content/en/tools/workbox/_shared/config/single/runtimeCaching.html
@@ -56,7 +56,7 @@
       },
       // Configure the broadcast update plugin.
       broadcastUpdate: {
-        channelName: 'my-update-channel',
+        headersToCheck: ['X-My-Custom-Header'],
       },
       // Add in any additional plugin logic you need.
       plugins: [
